syntax = "proto2";

package msg_types;

option java_package = "mozilla.appservices.places";
option java_outer_classname = "MsgTypes";

message HistoryVisitInfo {
    required string url = 1;
    optional string title = 2;
    required int64 timestamp = 3;
    required int32 visit_type = 4;
}

message HistoryVisitInfos {
    repeated HistoryVisitInfo infos = 1;
}
